third_party/rust/pin-project/tests/ui/project/deprecated.stderr
error: use of deprecated macro `project`: consider naming projected type by passing `project` argument to #[pin_project] attribute instead, see release note <https://github.com/taiki-e/pin-project/releases/tag/v0.4.21> for details
 --> tests/ui/project/deprecated.rs:5:3
  |
5 | #[project]
  |   ^^^^^^^
  |
note: the lint level is defined here
 --> tests/ui/project/deprecated.rs:1:9
  |
1 | #![deny(deprecated)]
  |         ^^^^^^^^^^

error: use of deprecated macro `project_ref`: consider naming projected type by passing `project_ref` argument to #[pin_project] attribute instead, see release note <https://github.com/taiki-e/pin-project/releases/tag/v0.4.21> for details
 --> tests/ui/project/deprecated.rs:6:3
  |
6 | #[project_ref]
  |   ^^^^^^^^^^^

error: use of deprecated macro `project_replace`: consider naming projected type by passing `project_replace` argument to #[pin_project] attribute instead, see release note <https://github.com/taiki-e/pin-project/releases/tag/v0.4.21> for details
 --> tests/ui/project/deprecated.rs:7:3
  |
7 | #[project_replace]
  |   ^^^^^^^^^^^^^^^
